--- a/features/cursor.yml
+++ b/features/cursor.yml
@@ -1,4 +1,4 @@
-name: Cursor style
+name: Cursor styles
 description: The `cursor` CSS property styles the pointer, allowing you to provide hints to the user on how to interact with the hovered element.
 spec: https://drafts.csswg.org/css-ui-4/#cursor
 caniuse:
@@ -7,6 +7,10 @@ caniuse:
   - css3-cursors-newer
 group: css
 # Baseline is delayed by support in Firefox for Android.
+# Most properties are not supported on Safari iOS.
+# compute_from to match caniuse css3-cursors.
+status:
+  compute_from: css.properties.cursor.none
 compat_features:
   - css.properties.cursor
   - css.properties.cursor.alias
