--- a/features/base64encodedecode.yml
+++ b/features/base64encodedecode.yml
@@ -1,5 +1,5 @@
 name: Base64 encoding and decoding
-description: Utility functions for encoding and decoding strings to and from base 64.
+description: The `atob()` and `btoa()` global functions encode and decode strings to and from base 64, respectively.
 spec: https://html.spec.whatwg.org/multipage/webappapis.html#atob
 caniuse: atob-btoa
 compat_features:
