--- a/features/beforeunload.yml
+++ b/features/beforeunload.yml
@@ -1,6 +1,11 @@
 name: Beforeunload
 description: "The `beforeunload` event is fired when the current window, contained document, and associated resources are about to be unloaded."
 spec: https://html.spec.whatwg.org/multipage/nav-history-apis.html#the-beforeunloadevent-interface
+# The commented out keys below are deprecated.
 compat_features:
   - api.BeforeUnloadEvent
   - api.Window.beforeunload_event
+  #- api.Window.beforeunload_event.event_returnvalue_activation
+  #- api.Window.beforeunload_event.generic_string_displayed
+  - api.Window.beforeunload_event.preventdefault_activation
+  #- api.Window.beforeunload_event.return_string_activation
