--- a/features/ruby.yml
+++ b/features/ruby.yml
@@ -4,7 +4,9 @@ spec:
   - https://html.spec.whatwg.org/multipage/text-level-semantics.html#the-rp-element
   - https://html.spec.whatwg.org/multipage/text-level-semantics.html#the-rt-element
   - https://html.spec.whatwg.org/multipage/text-level-semantics.html#the-ruby-element
-group: html
+group:
+  - html
+  - ruby
 caniuse: ruby
 compat_features:
   - html.elements.rp
