--- a/features/setinterval.yml
+++ b/features/setinterval.yml
@@ -1,9 +1,6 @@
-# BCD: https://github.com/mdn/browser-compat-data/tree/main/api/_globals/setInterval.json
-# MDN: https://developer.mozilla.org/docs/Web/API/setInterval
-# CIU: https://caniuse.com/?search=setInterval
 name: setInterval
 description: "The `setInterval()` global function repeatedly executes provided code on a given delay, and the accompanying `clearInterval()` cancels the interval."
-spec: https://html.spec.whatwg.org/multipage/timers-and-user-prompts.html#dom-setinterval-dev
+spec: https://html.spec.whatwg.org/multipage/timers-and-user-prompts.html#timers
 compat_features:
   - api.setInterval
   - api.clearInterval
