--- a/features/webxr-anchors.yml
+++ b/features/webxr-anchors.yml
@@ -1,5 +1,5 @@
-name: WebXR Anchors
-description: WebXR Anchors keep track of a pose that is fixed relative to the real world. Anchors build an illusion that the placed objects are really present in the user's environment.
+name: Anchors (WebXR)
+description: An `XRAnchor` object keeps track of a pose that is fixed relative to the real world. Anchors build an illusion that the placed objects are really present in the user's environment.
 spec: https://immersive-web.github.io/anchors/
 group: webxr
 compat_features:
