--- a/features/webxr-ar.yml
+++ b/features/webxr-ar.yml
@@ -1,9 +1,7 @@
-name: WebXR Augmented Reality (AR)
-description: WebXR Augmented Reality (AR) allows `immersive-ar` WebXR sessions which allow the users environment to be visible and aligned with the rendered content.
+name: Augmented reality
+description: The `"immersive-ar"` value for `navigator.xr.requestSession()` starts an augmented reality WebXR session that renders content aligned with the visible environment.
 spec: https://immersive-web.github.io/webxr-ar-module/
 group: webxr
-status:
-  compute_from: api.XRSession.environmentBlendMode
 compat_features:
   - api.XRSession.environmentBlendMode
   - api.XRSession.interactionMode
