--- a/features/webxr-device.yml
+++ b/features/webxr-device.yml
@@ -1,5 +1,5 @@
-name: WebXR Device API
-description: The WebXR API is a toolkit for building web-based virtual reality and augmented reality experiences.
+name: WebXR
+description: The `navigator.xr` API represents the browser's virtual reality or augmented reality system. You can use to request a WebXR session.
 spec: https://immersive-web.github.io/webxr/
 group: webxr
 status:
