--- a/features/webxr-dom-overlays.yml
+++ b/features/webxr-dom-overlays.yml
@@ -1,5 +1,5 @@
 name: WebXR DOM Overlays
-description: WebXR DOM Overlays allow 2D DOM content to be shown as an interactive transparent layer on top of the application-drawn WebGL content and camera image.
+description: A DOM overlay shows 2D DOM content as an interactive, transparent layer on top of a WebXR application's WebGL content and camera image.
 spec: https://immersive-web.github.io/dom-overlays/
 group: webxr
 compat_features:
