--- a/features/ink.yml
+++ b/features/ink.yml
@@ -1,5 +1,5 @@
 name: Ink
-description: The `navigator.ink` API draws between pointer events, reducing the delay between moving a stylus or cursor and a pen stroke appearing on screen.
+description: The `navigator.ink` API uses the system compositor to draw to a `<canvas>` element ahead of pointer events, reducing the delay between moving a stylus or cursor and a pen stroke appearing on screen.
 spec: https://wicg.github.io/ink-enhancement/
 compat_features:
   - api.Ink
