--- a/features/text-wrap-stable.yml
+++ b/features/text-wrap-stable.yml
@@ -1,7 +1,6 @@
 name: "text-wrap: stable"
-description: "The `text-wrap: stable` CSS declaration wraps text as normal, but does not change wrapping on earlier lines while the text is edited."
+description: "The `text-wrap: stable` CSS declaration wraps text using the default algorithm, but does not change wrapping on earlier lines while the text is being edited."
 spec: https://drafts.csswg.org/css-text-4/#valdef-text-wrap-style-stable
 group: text-wrap
 compat_features:
-  - css.properties.text-wrap-style.stable
   - css.properties.text-wrap.stable
