--- a/features/text-wrap.yml
+++ b/features/text-wrap.yml
@@ -4,5 +4,4 @@ spec: https://drafts.csswg.org/css-text-4/#text-wrap-shorthand
 group: text-wrap
 compat_features:
   - css.properties.text-wrap
-  - css.properties.text-wrap-style
-  - css.properties.text-wrap-style.auto
+  - css.properties.text-wrap.wrap
