--- a/features/hashchange.yml.dist
+++ b/features/hashchange.yml.dist
@@ -18,6 +18,19 @@ compat_features:
   # baseline_low_date: 2015-07-29
   # baseline_high_date: 2018-01-29
   # support:
+  #   chrome: "4"
+  #   chrome_android: "18"
+  #   edge: "12"
+  #   firefox: "3.6"
+  #   firefox_android: "4"
+  #   safari: "5"
+  #   safari_ios: "5"
+  - api.Window.hashchange_event
+
+  # baseline: high
+  # baseline_low_date: 2015-07-29
+  # baseline_high_date: 2018-01-29
+  # support:
   #   chrome: "8"
   #   chrome_android: "18"
   #   edge: "12"
