--- a/features/calc.yml
+++ b/features/calc.yml
@@ -3,5 +3,10 @@ description: The `calc()` CSS function computes mathematical expressions such a 
 spec: https://drafts.csswg.org/css-values-3/#calc-notation
 group: css
 caniuse: calc
+status:
+  compute_from: css.types.calc
 compat_features:
   - css.types.calc
+  - css.types.calc.gradient_color_stops
+  - css.types.calc.nested
+  - css.types.calc.number_values
