--- a/features/calc-size.yml
+++ b/features/calc-size.yml
@@ -1,5 +1,5 @@
 name: calc-size()
-description: The `calc-size()` CSS function computes mathematical expressions that include `height` and `weight` keyword values, for example `calc-size(fit-content, size / 2)`. Not to be confused with the `calc()` CSS function, which cannot use keyword values.
+description: The `calc-size()` CSS function computes mathematical expressions that include `height` and `width` keyword values, for example `calc-size(fit-content, size / 2)`. Not to be confused with the `calc()` CSS function, which cannot use keyword values.
 spec: https://drafts.csswg.org/css-values-5/#calc-size
 group: css
 compat_features:
