--- a/features/app-shortcuts.yml
+++ b/features/app-shortcuts.yml
@@ -1,5 +1,5 @@
 name: Application shortcuts
-description: The `shortcuts` web app manifest member registers common actions of an installed web app with the operating system. The operating system can then present these actions to the user in contextually appropriate locations, such as jump lists on Windows or the app launcher on Android.
+description: The `shortcuts` web app manifest member registers common actions of an installed web app with the device. The device can present these actions to the user in contextually appropriate locations, such as jump lists on Windows or the app launcher on Android.
 spec: https://w3c.github.io/manifest/#shortcuts-member
 group: progressive-web-app
 compat_features:
