--- a/features/app-share-target.yml
+++ b/features/app-share-target.yml
@@ -1,5 +1,5 @@
 name: Share targets
-description: The `share_target` web app manifest member registers an installed web app as a handler for shared content. When a user shares content by using the operating system share dialog, the installed app can be listed as an option for handling the shared content.
+description: The `share_target` web app manifest member registers an installed web app as a handler for shared content. When a user shares content by using the device share dialog, the installed app can be listed as an option for handling the shared content.
 spec: https://w3c.github.io/web-share-target/#share_target-member
 group: progressive-web-app
 compat_features:
