--- a/features/lab.yml.dist
+++ b/features/lab.yml.dist
@@ -13,5 +13,29 @@ status:
     safari: "15"
     safari_ios: "15"
 compat_features:
+  # ⬇️ Same status as overall feature ⬇️
+  # baseline: low
+  # baseline_low_date: 2023-05-09
+  # support:
+  #   chrome: "111"
+  #   chrome_android: "111"
+  #   edge: "111"
+  #   firefox: "113"
+  #   firefox_android: "113"
+  #   safari: "15"
+  #   safari_ios: "15"
   - css.types.color.lab
   - css.types.color.lch
+
+  # baseline: low
+  # baseline_low_date: 2023-08-21
+  # support:
+  #   chrome: "116"
+  #   chrome_android: "116"
+  #   edge: "116"
+  #   firefox: "113"
+  #   firefox_android: "113"
+  #   safari: "16.2"
+  #   safari_ios: "16.2"
+  - css.types.color.lab.mixed_type_parameters
+  - css.types.color.lch.mixed_type_parameters
