--- a/features/oklab.yml.dist
+++ b/features/oklab.yml.dist
@@ -13,5 +13,29 @@ status:
     safari: "15.4"
     safari_ios: "15.4"
 compat_features:
+  # ⬇️ Same status as overall feature ⬇️
+  # baseline: low
+  # baseline_low_date: 2023-05-09
+  # support:
+  #   chrome: "111"
+  #   chrome_android: "111"
+  #   edge: "111"
+  #   firefox: "113"
+  #   firefox_android: "113"
+  #   safari: "15.4"
+  #   safari_ios: "15.4"
   - css.types.color.oklab
   - css.types.color.oklch
+
+  # baseline: low
+  # baseline_low_date: 2023-08-21
+  # support:
+  #   chrome: "116"
+  #   chrome_android: "116"
+  #   edge: "116"
+  #   firefox: "113"
+  #   firefox_android: "113"
+  #   safari: "16.2"
+  #   safari_ios: "16.2"
+  - css.types.color.oklab.mixed_type_parameters
+  - css.types.color.oklch.mixed_type_parameters
