--- a/features/window-management.yml
+++ b/features/window-management.yml
@@ -22,4 +22,5 @@ compat_features:
   - api.ScreenDetails.screenschange_event
   - api.Window.getScreenDetails
   - api.Window.open.relative-multi-screen
+  - html.elements.iframe.allow.window-management
   - http.headers.Permissions-Policy.window-management
