--- a/features/contenteditable.yml
+++ b/features/contenteditable.yml
@@ -3,6 +3,7 @@ description: The `contenteditable` global HTML attribute allows the user to edit
 spec: https://html.spec.whatwg.org/multipage/interaction.html#contenteditable
 caniuse: contenteditable
 compat_features:
+  - html.global_attributes.contenteditable
   - api.HTMLElement.contentEditable
   - api.HTMLElement.inputMode
   - api.HTMLElement.isContentEditable
