--- a/features/contenteditable-plaintextonly.yml
+++ b/features/contenteditable-plaintextonly.yml
@@ -1,4 +1,4 @@
-name: Contenteditable plaintext-only
+name: 'contenteditable="plaintext-only"'
 description: The `contenteditable="plaintext-only"` global HTML attribute allows the user to edit the content of an element, but prevents rich-text formatting.
 spec: https://html.spec.whatwg.org/multipage/interaction.html#attr-contenteditable-plaintextonly-state
 compat_features:
