--- a/features/lang-attr.yml
+++ b/features/lang-attr.yml
@@ -1,5 +1,5 @@
 name: Lang
-description: The `lang` global attribute defines the language of an element, for the purpose of assistive technology to correctly read the content.
+description: The `lang` global HTML attribute defines the language of an element. It's used by assistive technology to correctly read the content, translation tools to select the origin language, and other applications.
 spec: https://html.spec.whatwg.org/multipage/dom.html#attr-lang
 compat_features:
   - api.HTMLElement.lang
