--- a/features/title-attr.yml
+++ b/features/title-attr.yml
@@ -1,6 +1,6 @@
 name: Title
 description: The `title` global attribute sets information about the element it belongs to. The attribute value is typically displayed as a tooltip that appears on mouse over, which can cause accessibility issues for touch-only, keyboard-only, or assistive technology users.
-spec: https://html.spec.whatwg.org/multipage/dom.html#dom-title
+spec: https://html.spec.whatwg.org/multipage/dom.html#attr-title
 compat_features:
   - api.HTMLElement.title
   - html.global_attributes.title
