--- a/features/csp.yml
+++ b/features/csp.yml
@@ -47,6 +47,7 @@ compat_features:
   - html.elements.iframe.csp
   - html.elements.meta.http-equiv.content-security-policy
   - html.global_attributes.nonce
+  - html.global_attributes.nonce.nonce_hiding
   - http.headers.Content-Security-Policy
   - http.headers.Content-Security-Policy-Report-Only
   - http.headers.Content-Security-Policy.base-uri
