--- a/features/autocorrect.yml
+++ b/features/autocorrect.yml
@@ -1,5 +1,5 @@
 name: Autocorrect
-description: The `autocorrect` global attribute controls whether to automatically correct spelling or punctuation errors for user input.
+description: The `autocorrect` global HTML attribute controls whether to automatically correct spelling or punctuation errors for user input.
 spec: https://html.spec.whatwg.org/multipage/interaction.html#autocorrection
 compat_features:
   - api.HTMLElement.autocorrect
