--- a/features/overflow-clip.yml
+++ b/features/overflow-clip.yml
@@ -1,5 +1,5 @@
 name: "overflow: clip"
-description: "The `overflow: clip` CSS declaration clips an element's overflowing content to the box that's defined by the `overflow-clip-margin` property."
+description: "The `overflow: clip` CSS declaration clips an element's overflowing content to the box that's defined by the `overflow-clip-margin` property. Unlike `overflow: hidden`, it allows you to hide overflow on one axis while keeping overflow on the other axis visible."
 spec: https://drafts.csswg.org/css-overflow-3/#propdef-overflow
 group: css
 compat_features:
