--- a/features/scroll-markers.yml
+++ b/features/scroll-markers.yml
@@ -1,5 +1,5 @@
 name: Scroll markers
-description: The `::scroll-marker` CSS pseudo-element is a focusable control within its ancestor scroll container's `::scroll-marker-group` that scrolls to its originating element.
+description: A scroll container can be navigated by activating `::scroll-marker` pseudo-elements which appear in a generated `::scroll-marker-group` pseudo-element, either before or after the scroll container.
 spec: https://drafts.csswg.org/css-overflow-5/#scroll-markers
 group: scrolling
 compat_features:
